fix top-right button clickability unreliability as it was below the top bar z-index wise

--- a/visualizer/src/css/styles.css
+++ b/visualizer/src/css/styles.css
@@ -371,7 +371,7 @@ svg path {
 	background-size: 40%;
 	background-repeat: no-repeat;
 	transition: transform 0.1s ease-in-out;
-	z-index: 750;
+	z-index: 7500;
 }
 .corner-button:hover {
 	transform: scale(1.1);
